--- a/JAV/index.html
+++ b/JAV/index.html
@@ -154,8 +154,8 @@ body {
 <!-- 国产AV -->
 <section>
   <div class="section-title-row">
-    <div class="section-title">🎬 国产AV专区</div>
-    <a href="https://yunvgong.com/JAV/chinese_AV" class="more-link" target="_blank">看更多 ›</a>
+    <div class="section-title">🎬 日本AV专区</div>
+    <a href="https://yunvgong.com/JAV/main" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="drama-grid" id="chinaGrid"></div>
 </section>
