--- a/JAV/player_template.html
+++ b/JAV/player_template.html
@@ -322,7 +322,7 @@ function getSeriesName() {
 }
 
 function loadSeriesData(seriesName) {
-	const dataUrl = `${window.location.origin}/CN_AV/menu/${seriesName}_data.json`;
+	const dataUrl = `${window.location.origin}/JAV/menu/${seriesName}_data.json`;
     fetch(dataUrl)
     .then(res => { if(!res.ok) throw new Error("加载失败"); return res.json(); })
     .then(data => {
