--- a/JAV/header.html
+++ b/JAV/header.html
@@ -2,15 +2,15 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫国产AV</div>
-  <a href="https://yunvgong.com/CN_AV/index.html" class="logo">御女宫国产AV</a>
+  <div class="logo">御女宫日本AV</div>
+  <a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-    <a href="/CN_AV/newAV">最新更新</a>
-    <a href="/CN_AV/chinese_AV">国产AV</a>
-    <a href="/CN_AV/actress">国产女优</a>
-    <a href="/CN_AV/company">A片出品厂</a>
-    <a href="https://t.me/yunvgongCNAV" target="_blank">电报群</a>
+    <a href="/JAV/newAV">最新更新</a>
+    <a href="/JAV/chinese_AV">国产AV</a>
+    <a href="/JAV/actress">国产女优</a>
+    <a href="/JAV/company">A片出品厂</a>
+    <a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
   </nav>
 </div>
