--- a/JAV/header.html
+++ b/JAV/header.html
@@ -8,8 +8,8 @@
 
   <nav id="navMenu">
     <a href="/JAV/newAV">最新更新</a>
-    <a href="/JAV/chinese_AV">国产AV</a>
-    <a href="/JAV/actress">国产女优</a>
+    <a href="/JAV/chinese_AV">日本AV</a>
+    <a href="/JAV/actress">日本女优</a>
     <a href="/JAV/company">A片出品厂</a>
     <a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
   </nav>
