--- a/JAV/header.html
+++ b/JAV/header.html
@@ -11,6 +11,6 @@
     <a href="/JAV/chinese_AV">日本AV</a>
     <a href="/JAV/actress">日本女优</a>
     <a href="/JAV/company">A片出品厂</a>
-    <a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
+    <a href="https://t.me/yunvgongJAV" target="_blank">日本AV电报群</a>
   </nav>
 </div>
