--- a/JAV/main.html
+++ b/JAV/main.html
@@ -3,18 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>国产AV</title>
+<title>国产AV - 影片列表</title>
 <style>
-/* ======= 全局样式 ======= */
 body {
   margin: 0;
   font-family: "微软雅黑", sans-serif;
   background-color: #0d0d0d;
   color: #fff;
-  padding-top: 60px; /* 预留顶部导航高度 */
+  padding-top: 60px;
 }
 
-/* ======= 影片网格 ======= */
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
@@ -32,209 +30,103 @@ body {
   display: flex;
   flex-direction: column;
 }
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
-}
-.card img {
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
-}
+.card:hover { transform: scale(1.05); box-shadow: 0 4px 12px rgba(255,255,255,0.2); }
+.card img { width: 100%; aspect-ratio: 16/9; object-fit: cover; }
 
-/* ======= 卡片信息层 ======= */
 .card-type {
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #fff;
-  border: 1px solid #ff0000;
-  padding: 2px 6px;
-  border-radius: 4px;
-  background-color: #ff0000;
+  position: absolute; bottom: 8px; right: 8px;
+  font-size: 12px; font-weight: bold; color:#fff;
+  background:#ff0000; padding:2px 6px; border-radius:4px;
 }
+
 .actor {
-  position: absolute;
-  bottom: 8px;
-  left: 8px;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 2px 6px;
-  border-radius: 4px;
-  font-size: 12px;
+  position: absolute; bottom: 8px; left: 8px;
+  background: rgba(0,0,0,0.5);
+  padding:2px 6px; border-radius:4px; font-size:12px;
 }
 
-.card-info {
-  padding: 8px 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-.card-info-top {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  overflow: hidden;
-}
-.card-info-top .idcode {
-  color: #ffcc00;
-  font-weight: bold;
-  font-size: 12px;
-  white-space: nowrap;
-  flex-shrink: 0;
-}
-.card-info-top .title {
-  font-size: 14px;
-  color: #fff;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  flex-grow: 1;
-}
-.card-info-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 12px;
-  color: #ccc;
-}
-.star { color: gold; font-weight: bold; }
-.date { display: flex; align-items: center; gap: 4px; }
-.date::before { content: "📅"; font-size: 13px; }
+.card-info { padding: 8px 10px; display: flex; flex-direction: column; gap: 6px; }
 
-/* ======= 分页 ======= */
+.card-info-top { display: flex; align-items: center; gap: 6px; overflow: hidden; }
+.idcode { color: #ffcc00; font-weight: bold; font-size: 12px; white-space: nowrap; }
+.title { font-size:14px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; flex-grow:1; }
+
+.card-info-bottom { display: flex; justify-content: space-between; font-size:12px; color:#ccc; }
+.star { color: gold; }
+.date { display:flex; align-items:center; gap:4px; }
+.date::before { content:"📅"; }
+
 .pagination {
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-bottom: 30px;
+  display: flex; justify-content:center; align-items:center; gap:6px;
+  padding: 20px 0 40px;
 }
 .pagination button {
-  padding: 6px 12px;
-  background: #333;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  padding: 6px 12px; background:#333; color:#fff;
+  border:none; border-radius:4px; cursor:pointer;
 }
-.pagination button.active { background: red; }
-.pagination button:hover:not(:disabled) { background: #555; }
-.pagination button:disabled { opacity: 0.4; cursor: not-allowed; }
-.pagination input {
-  width: 50px;
-  padding: 4px;
-  border-radius: 4px;
-  border: 1px solid #555;
-  background: #222;
-  color: #fff;
-  text-align: center;
-}
-.pagination span { font-size: 14px; }
+.pagination button:hover:not(:disabled) { background:#555; }
+.pagination button:disabled { opacity:.4; cursor:not-allowed; }
+.pagination input { width:50px; padding:4px; background:#222; border:1px solid #555; color:#fff; text-align:center; border-radius:4px; }
+
 </style>
 </head>
 <body>
 
-<!-- ======= 顶部导航栏 ======= -->
 <div id="header-placeholder"></div>
 
-<!-- ======= 主体内容 ======= -->
-<div id="mainContent">
-  <div id="dramaSection">
-    <div class="grid" id="dramaGrid"></div>
-    <div class="pagination" id="pagination"></div>
-  </div>
+<div id="dramaSection">
+  <div class="grid" id="dramaGrid"></div>
+  <div class="pagination" id="pagination"></div>
 </div>
 
 <script>
-/* ======= 加载 header.html + header.js ======= */
 fetch('header.html')
-  .then(res => res.text())
-  .then(html => {
+  .then(r=>r.text())
+  .then(html=>{
     document.getElementById('header-placeholder').innerHTML = html;
-
-    const script = document.createElement('script');
-    script.src = 'header.js';
-    script.onload = () => {
-      if (typeof initHeaderMenu === 'function') initHeaderMenu();
-      if (typeof setActiveMenu === 'function') setActiveMenu('menu-drama');
-    };
-    document.body.appendChild(script);
+    const s=document.createElement('script'); s.src='header.js'; document.body.appendChild(s);
   });
 
-/* ========== 加载底部 footer.html ========== */ 
 fetch('https://yunvgong.com/footer.html')
-  .then(r => r.text())
-  .then(html => {
-    let footer = document.getElementById('footer-placeholder');
-    if (!footer) {
-      footer = document.createElement('div');
-      footer.id = 'footer-placeholder';
-      document.body.appendChild(footer);
-    }
+  .then(r=>r.text())
+  .then(html=>{
+    const footer=document.createElement('div');
     footer.innerHTML = html;
-  })
-  .catch(e => console.warn('无法加载 footer.html:', e));
+    document.body.appendChild(footer);
+  });
 
-/* ======= 加载切割影片数据 ======= */
-let dramas = [], filtered = [], currentPage = 1, pageSize = 24;
-const itemsPerFile = 1000;
-const basePath = "https://yunvgong.com/JAV/category/main_page/";
+let dramas=[], currentPage=1, pageSize=24;
+const basePath="https://yunvgong.com/JAV/category/main_page/";
 
-async function loadDramas() {
-  dramas = [];
-  let fileIndex = 1;
-  while (true) {
-    const url = `${basePath}page_${fileIndex}.json`;
-    try {
-      const res = await fetch(url);
-      if (!res.ok) break;
-      const data = await res.json();
-      if (!data || data.length === 0) break;
-      dramas = dramas.concat(data);
-      fileIndex++;
-    } catch (e) {
-      console.warn("无法加载 JSON 文件:", url, e);
-      break;
-    }
+async function loadDramas(){
+  let i=1;
+  while(true){
+    const url=`${basePath}page_${i}.json`;
+    try{
+      const res=await fetch(url);
+      if(!res.ok) break;
+      const data=await res.json();
+      if(!data?.length) break;
+      dramas.push(...data);
+      i++;
+    }catch{ break; }
   }
-
-  if (dramas.length === 0) {
-    document.getElementById('dramaGrid').innerHTML =
-      "<p style='text-align:center;color:#ccc;'>加载失败，请稍后再试。</p>";
-    return;
-  }
-
-  filtered = dramas;
   renderPage(currentPage);
 }
 
-function renderPage(page) {
-  const container = document.getElementById('dramaGrid');
-  container.innerHTML = '';
-  const start = (page - 1) * pageSize;
-  const end = start + pageSize;
-  filtered.slice(start, end).forEach(d => {
-    const card = document.createElement('div');
-    card.className = 'card';
-    card.onclick = () => { window.location.href = d.title_play_url; };
+function renderPage(p){
+  const box=document.getElementById('dramaGrid');
+  box.innerHTML='';
+  const list=dramas.slice((p-1)*pageSize, p*pageSize);
 
-    const rating = parseFloat(d.rating) || 0;
-    let stars = '';
-    const full = Math.floor(rating);
-    const half = rating % 1 >= 0.5 ? 1 : 0;
-    for (let i = 0; i < full; i++) stars += '★';
-    if (half) stars += '☆';
-    for (let i = stars.length; i < 5; i++) stars += '✩';
-
-    card.innerHTML = `
-      <div style="position: relative;">
-        <img src="${d.cover_url}" alt="${d.title}">
-        <div class="actor">${d.actress}</div>
-        <div class="card-type">${d.type}</div>
+  list.forEach(d=>{
+    const a = Array.isArray(d.actress) ? d.actress.join("、") : (d.actress||'未知');
+    box.innerHTML+=`
+    <div class="card" onclick="location.href='${d.title_play_url}'">
+      <div style="position:relative;">
+        <img src="${d.cover_url}">
+        <div class="actor">${a}</div>
+        <div class="card-type">${d.type||'未知'}</div>
       </div>
       <div class="card-info">
         <div class="card-info-top">
@@ -242,62 +134,31 @@ function renderPage(page) {
           <span class="title">${d.title}</span>
         </div>
         <div class="card-info-bottom">
-          <div class="star">${stars} ${d.rating}</div>
+          <div class="star">⭐⭐⭐⭐⭐</div>
           <div class="date">${d.publish_date}</div>
         </div>
-      </div>`;
-    container.appendChild(card);
+      </div>
+    </div>`;
   });
+
   renderPagination();
 }
 
-function renderPagination() {
-  const pagination = document.getElementById('pagination');
-  pagination.innerHTML = '';
-
-  // 自动计算总页数
-  const totalPages = Math.max(1, Math.ceil(filtered.length / pageSize));
-
-  const prev = document.createElement('button');
-  prev.textContent = '上一页';
-  prev.disabled = currentPage === 1;
-  prev.onclick = () => {
-    if (currentPage > 1) {
-      currentPage--;
-      renderPage(currentPage);
-    }
-  };
-  pagination.appendChild(prev);
-
-  const pageInfo = document.createElement('span');
-  pageInfo.innerHTML = `第 <input type="number" min="1" max="${totalPages}" value="${currentPage}" id="jumpPage"> 页 / 共 ${totalPages} 页`;
-  pagination.appendChild(pageInfo);
-
-  const jumpBtn = document.createElement('button');
-  jumpBtn.textContent = '跳转';
-  jumpBtn.onclick = () => {
-    const val = parseInt(document.getElementById('jumpPage').value);
-    if (val >= 1 && val <= totalPages) {
-      currentPage = val;
-      renderPage(currentPage);
-    }
-  };
-  pagination.appendChild(jumpBtn);
-
-  const next = document.createElement('button');
-  next.textContent = '下一页';
-  next.disabled = currentPage === totalPages;
-  next.onclick = () => {
-    if (currentPage < totalPages) {
-      currentPage++;
-      renderPage(currentPage);
-    }
-  };
-  pagination.appendChild(next);
+function renderPagination(){
+  const total=Math.ceil(dramas.length/pageSize);
+  document.getElementById('pagination').innerHTML=`
+    <button ${currentPage===1?'disabled':''} onclick="changePage(-1)">上一页</button>
+    <span>第 <input id="jump" type="number" min="1" max="${total}" value="${currentPage}"> / ${total} 页</span>
+    <button onclick="jumpPage()">跳转</button>
+    <button ${currentPage===total?'disabled':''} onclick="changePage(1)">下一页</button>
+  `;
 }
 
-/* ======= 初始化 ======= */
+function changePage(s){ currentPage=Math.max(1, currentPage+s); renderPage(currentPage); }
+function jumpPage(){ const t=parseInt(document.getElementById('jump').value); const max=Math.ceil(dramas.length/pageSize); if(t>=1&&t<=max){ currentPage=t; renderPage(currentPage);} }
+
 loadDramas();
 </script>
+
 </body>
 </html>
