--- a/JAV/header.html
+++ b/JAV/header.html
@@ -8,7 +8,7 @@
 
   <nav id="navMenu">
     <a href="/JAV/newAV">最新更新</a>
-    <a href="/JAV/chinese_AV">日本AV</a>
+    <a href="/JAV/main">日本AV</a>
     <a href="/JAV/actress">日本女优</a>
     <a href="/JAV/company">A片出品厂</a>
     <a href="https://t.me/yunvgongJAV" target="_blank">日本AV电报群</a>
