--- a/JAV/index.html
+++ b/JAV/index.html
@@ -11,7 +11,7 @@ body {
   font-family: "微软雅黑", sans-serif;
   background-color: #0d0d0d;
   color: #fff;
-  padding-top: 70px; /* 预留顶部栏位置 */
+  padding-top: 70px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -40,34 +40,27 @@ body {
   margin: 30px 0 16px 20px;
 }
 
-/* ======= 标题 + 看更多按钮 ======= */
+/* 标题 + 看更多按钮 */
 .section-title-row {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 30px 20px 16px;
 }
-
-.section-title-row .section-title {
-  margin: 0;
-}
-
+.section-title-row .section-title { margin: 0; }
 .more-link {
   color: #ffa500;
   font-size: 15px;
   text-decoration: none;
   transition: color 0.2s;
 }
-
-.more-link:hover {
-  color: #ff6600;
-  text-decoration: underline;
-}
+.more-link:hover { color: #ff6600; text-decoration: underline; }
 
 /* 网格 */
 .grid-3 { display: grid; grid-template-columns: repeat(3,1fr); gap: 20px; padding: 0 20px; }
 .grid-5 { display: grid; grid-template-columns: repeat(5,1fr); gap: 18px; padding: 0 20px; }
 
+/* 卡片 */
 .card {
   background:#1a1a1a; border-radius:10px; overflow:hidden; position:relative;
   cursor:pointer; aspect-ratio:16/9;
@@ -85,9 +78,6 @@ body {
 .card-title2 { padding:10px; font-size:15px; text-align:center; color:#eee; }
 .card-info { font-size:13px; color:#ccc; text-align:center; padding-bottom:10px; line-height:1.5; }
 
-/* 厂商分页区 */
-.company-wrap { padding: 0 20px 20px; }
-
 /* 国产AV 卡片 */
 .drama-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(240px,1fr)); gap:20px; padding:0 20px 40px; }
 .drama-card { background:#1a1a1a; border-radius:8px; overflow:hidden; cursor:pointer; transition:transform .18s; }
@@ -100,14 +90,8 @@ body {
 .drama-info .meta { margin-top:6px; display:flex; justify-content:space-between; color:#ccc; font-size:12px; }
 
 /* 响应式 */
-@media (max-width: 992px) {
-  .grid-5 { grid-template-columns: repeat(3,1fr); }
-  .grid-3 { grid-template-columns: repeat(2,1fr); }
-}
-@media (max-width: 600px) {
-  .grid-5, .grid-3 { grid-template-columns: 1fr; }
-  .actress-grid { grid-template-columns: repeat(auto-fill,minmax(140px,1fr)); }
-}
+@media (max-width: 992px) { .grid-5 { grid-template-columns: repeat(3,1fr); } .grid-3 { grid-template-columns: repeat(2,1fr); } }
+@media (max-width: 600px) { .grid-5, .grid-3 { grid-template-columns: 1fr; } .actress-grid { grid-template-columns: repeat(auto-fill,minmax(140px,1fr)); } }
 </style>
 </head>
 <body>
@@ -164,102 +148,92 @@ body {
 <div id="footer-placeholder"></div>
 
 <script>
-/* ========== 加载顶部 header.html + header.js ========== */
+/* 加载顶部 header.html + header.js */
 fetch('header.html')
   .then(r => r.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
     const s = document.createElement('script');
     s.src = 'header.js';
-    s.onload = () => {
-      if (typeof initHeaderMenu === 'function') initHeaderMenu();
-      if (typeof setActiveMenu === 'function') setActiveMenu('menu-home');
-    };
     document.body.appendChild(s);
   });
 
-/* ========== 加载底部 footer.html ========== */
-fetch('https://yunvgong.com/footer.html')  <!-- 修改这里 -->
+/* 加载底部 footer.html */
+fetch('https://yunvgong.com/footer.html')
   .then(r => r.text())
-  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .then(html => document.getElementById('footer-placeholder').innerHTML)
   .catch(e => console.warn('无法加载 footer.html:', e));
 
-/* 分类和最新发布 */
-/* 分类和最新发布（从 latest_100.json 获取最新影片） */
-async function loadMainSections() {
-  try {
-    // 加载分类（原来的 category_net.json 保留）
-    const catRes = await fetch("https://yunvgong.com/JAV/category/new_cover.json");
-    const catData = await catRes.json();
-    renderGrid(document.getElementById("categoryGrid"), catData.slice(0,3));
-
-    // 加载影片列表并按发布日期排序（新改部分）
-    const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/JAV/category/latest_100.json");
-    const dramas = await res.json();
-
-    // 过滤掉没有日期的条目并按日期从新到旧排序
-    dramas.sort((a, b) => new Date(b.publish_date || 0) - new Date(a.publish_date || 0));
-
-    const list = dramas.slice(0, 30); // 只显示前 30 个最新发布
-    const target = document.getElementById('latestGrid');
-    target.innerHTML = '';
-
-    list.forEach(d => {
-      const card = document.createElement('div');
-      card.className = 'drama-card';
-      card.innerHTML = `
-        <div style="position:relative;">
-          <img src="${d.cover_url || ''}" alt="${d.title || ''}">
-          <div class="actor">${d.actress || ''}</div>
-          <div class="card-type">${d.type || ''}</div>
-        </div>
-        <div class="drama-info">
-          <div class="idcode">${d.IDcode || ''}</div>
-          <div class="title">${d.title || ''}</div>
-          <div class="meta">
-            <span>📅 ${d.publish_date || ''}</span>
-            <span>⭐ ${d.rating || ''}</span>
-          </div>
-        </div>`;
-      card.onclick = () => { if (d.title_play_url) window.location.href = d.title_play_url; };
-      target.appendChild(card);
-    });
-  } catch (e) {
-    console.error("加载分类或最新发布失败：", e);
-  }
-}
-
-function renderGrid(container, items) {
+/* 分类网格 */
+async function loadCategories() {
+  const res = await fetch("https://yunvgong.com/JAV/category/new_cover.json");
+  const data = await res.json();
+  const container = document.getElementById('categoryGrid');
   container.innerHTML = '';
-  items.forEach(it => {
-    const img = it.img_url || "https://picture.yoshiclub.xyz/20230930/20230930013717874874.jpg";
+  data.slice(0,3).forEach(it => {
     const card = document.createElement('div');
     card.className = 'card';
-    card.innerHTML = `<img src="${img}" alt=""><div class="card-title">${it.company || it.name || ''}</div>`;
-    card.onclick = () => { if (it.company_url) window.location.href = it.company_url; };
+    card.innerHTML = `<img src="${it.img_url}" alt=""><div class="card-title">${it.company||it.name||''}</div>`;
+    card.onclick = () => { if(it.company_url) window.location.href = it.company_url; };
     container.appendChild(card);
   });
+}
+
+/* 最新发布A片 - 加载 latest_100.js */
+function loadLatestAV() {
+  const script = document.createElement('script');
+  script.src = 'https://yunvgong.com/JAV/category/latest_100.js';
+  script.onload = () => {
+    if (typeof window.PAGE_DATA !== 'undefined') {
+      const dramas = window.PAGE_DATA.slice(0, 30);
+      const target = document.getElementById('latestGrid');
+      target.innerHTML = '';
+      dramas.forEach(d => {
+        const card = document.createElement('div');
+        card.className = 'drama-card';
+        const actressStr = Array.isArray(d.actress) ? d.actress.join('、') : (d.actress || '');
+        card.innerHTML = `
+          <div style="position:relative;">
+            <img src="${d.cover_url||''}" alt="${d.title||''}">
+            <div class="actor">${actressStr}</div>
+            <div class="card-type">${d.type||''}</div>
+          </div>
+          <div class="drama-info">
+            <div class="idcode">${d.IDcode||''}</div>
+            <div class="title">${d.title||''}</div>
+            <div class="meta">
+              <span>📅 ${d.publish_date||''}</span>
+              <span>⭐ ${d.rating||''}</span>
+            </div>
+          </div>`;
+        card.onclick = () => { if(d.title_play_url) window.location.href = d.title_play_url; };
+        target.appendChild(card);
+      });
+    } else {
+      console.error("latest_100.js 未定义 window.PAGE_DATA");
+    }
+  };
+  document.body.appendChild(script);
 }
 
 /* 女优 */
 async function loadActresses() {
   const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/CN_AV/category/CN_actress_menu_all.json");
   const data = await res.json();
-  renderActresses(data.filter(a => a.img_url).slice(0,20));
-}
-function renderActresses(list) {
-  const c = document.getElementById('actressGrid'); c.innerHTML = '';
+  const list = data.filter(a => a.img_url).slice(0,20);
+  const c = document.getElementById('actressGrid');
+  c.innerHTML = '';
   list.forEach(a => {
     const card = document.createElement('div'); card.className = 'actress-card';
     card.innerHTML = `<img src="${a.img_url}" alt="${a.name}">
       <div class="card-title2">${a.name}</div>
       <div class="card-info">${a.zodiac?`🌟 ${a.zodiac}<br>`:''}${a.height?`📏 ${a.height}<br>`:''}${a.measurements?`💃 ${a.measurements}`:''}</div>`;
-    card.onclick = () => { if (a.actress_url) window.location.href = a.actress_url; };
+    card.onclick = () => { if(a.actress_url) window.location.href = a.actress_url; };
     c.appendChild(card);
   });
 }
 
-/* 厂商（无分页） */
+/* 厂商 */
 async function loadCompanyList() {
   const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/CN_AV/category/company_all.json");
   const data = await res.json();
@@ -270,12 +244,12 @@ async function loadCompanyList() {
     const card = document.createElement('div'); card.className='card';
     const img = c.cover || c.img_url || "https://picture.yoshiclub.xyz/20230930/20230930013717874874.jpg";
     card.innerHTML = `<img src="${img}" alt="${c.company}"><div class="card-title">${c.company}</div>`;
-    card.onclick = () => { if (c.company_url) window.location.href = c.company_url; };
+    card.onclick = () => { if(c.company_url) window.location.href = c.company_url; };
     target.appendChild(card);
   });
 }
 
-/* 国产AV专区（无分页） */
+/* 国产AV专区 */
 async function loadChinaDramas() {
   const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/JAV/category/drama_export.json");
   const dramas = await res.json();
@@ -284,22 +258,24 @@ async function loadChinaDramas() {
   target.innerHTML = '';
   list.forEach(d => {
     const card = document.createElement('div'); card.className='drama-card';
-    card.innerHTML = `<div style="position:relative;"><img src="${d.cover_url || ''}" alt="${d.title || ''}">
-        <div class="actor">${d.actress || ''}</div>
-        <div class="card-type">${d.type || ''}</div>
+    const actressStr = Array.isArray(d.actress) ? d.actress.join('、') : (d.actress || '');
+    card.innerHTML = `<div style="position:relative;"><img src="${d.cover_url||''}" alt="${d.title||''}">
+        <div class="actor">${actressStr}</div>
+        <div class="card-type">${d.type||''}</div>
       </div>
       <div class="drama-info">
-        <div class="idcode">${d.IDcode || ''}</div>
-        <div class="title">${d.title || ''}</div>
-        <div class="meta"><span>📅 ${d.publish_date || ''}</span><span>⭐ ${d.rating || ''}</span></div>
+        <div class="idcode">${d.IDcode||''}</div>
+        <div class="title">${d.title||''}</div>
+        <div class="meta"><span>📅 ${d.publish_date||''}</span><span>⭐ ${d.rating||''}</span></div>
       </div>`;
-    card.onclick = ()=> { if (d.title_play_url) window.location.href = d.title_play_url; };
+    card.onclick = ()=> { if(d.title_play_url) window.location.href = d.title_play_url; };
     target.appendChild(card);
   });
 }
 
 document.addEventListener('DOMContentLoaded', () => {
-  loadMainSections();
+  loadCategories();
+  loadLatestAV();    // 这里改为加载 latest_100.js
   loadActresses();
   loadCompanyList();
   loadChinaDramas();
