--- a/index3.html
+++ b/index3.html
@@ -3,32 +3,22 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>御女宫 · 分类导航</title>
-
+<title>频道首页</title>
 <style>
 body {
   margin: 0;
   font-family: "微软雅黑", sans-serif;
   background: #0d0d0d;
   color: #fff;
-  padding-top: 70px;
+  padding: 20px;
 }
 
-/* 标题 */
-.page-title {
-  text-align: center;
-  font-size: 28px;
-  font-weight: bold;
-  color: #ffa500;
-  margin-bottom: 28px;
-}
-
-/* 内容布局 */
+/* 顶部卡片布局 */
 #companyGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-  gap: 25px;
-  padding: 0 20px 40px;
+  gap: 20px;
+  margin-bottom: 40px;
 }
 
 /* 卡片 */
@@ -45,7 +35,6 @@ body {
   transform: scale(1.05);
   box-shadow: 0 6px 16px rgba(255,255,255,.25);
 }
-
 .card img {
   width: 100%;
   height: 100%;
@@ -56,73 +45,72 @@ body {
 .card:hover img {
   opacity: .25;
 }
-
 .card-overlay {
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
-
 .card-title {
   font-size: 22px;
   font-weight: bold;
   text-shadow: 0 0 10px rgba(0,0,0,.8);
 }
+
+/* 底部文字列表 */
+.channel-list {
+  margin-top: 40px;
+}
+.channel-list p {
+  margin: 6px 0;
+}
+.channel-list a {
+  color: #ffa500;
+  text-decoration: none;
+}
 </style>
 </head>
 <body>
 
-<!-- 顶部 header 插槽 -->
-<div id="header-placeholder"></div>
+<h1>频道首页</h1>
 
-<div class="page-title">御女宫网站分类</div>
-
+<!-- 顶部三个卡片 -->
 <div id="companyGrid"></div>
 
-<!-- 底部 footer 插槽 -->
-<div id="footer-placeholder"></div>
+<hr>
+
+<!-- 底部文字列表 -->
+<div class="channel-list">
+  <h2>频道首页</h2>
+  <p><a href="./CN_AV/index.html">国产AV网站</a></p>
+  <p><a href="./CN_AV/index.html">国产AV网站</a></p>
+  <p><a href="./JAV/index.html">日本AV</a></p>
+  <p><a href="./JAV/index.html">日本AV</a></p>
+  <p><a href="./福利姬频道总目录/index.html">COS福利姬图库</a></p>
+  <p><a href="./福利姬频道总目录/index.html">COS福利姬图库</a></p>
+</div>
 
 <script>
-// 加载 header
-fetch("header.html")
-  .then(r => r.text())
-  .then(html => {
-    document.getElementById("header-placeholder").innerHTML = html;
-    const script = document.createElement("script");
-    script.src = "header.js";
-    document.body.appendChild(script);
-  });
+// 顶部三个卡片数据
+const companyList = [
+  { company: "国产AV网站", company_url: "./CN_AV/index.html", img_url: "https://example.com/cnav.jpg" },
+  { company: "日本AV", company_url: "./JAV/index.html", img_url: "https://example.com/jav.jpg" },
+  { company: "COS福利姬图库", company_url: "./福利姬频道总目录/index.html", img_url: "https://example.com/cos.jpg" }
+];
 
-// 加载 footer
-fetch("https://yunvgong.com/footer.html")
-  .then(r => r.text())
-  .then(html => document.getElementById("footer-placeholder").innerHTML = html);
-
-// 加载分类 JSON
-fetch("https://yunvgong.com/category_net.json")
-  .then(r => r.json())
-  .then(list => render(list));
-
-function render(list) {
-  const box = document.getElementById("companyGrid");
-  box.innerHTML = "";
-
-  list.forEach(item => {
-    const img = item.img_url || "https://picture.yoshiclub.xyz/20230930/20230930013717874874.jpg";
-    const div = document.createElement("div");
-    div.className = "card";
-    div.onclick = () => window.location.href = item.company_url;
-
-    div.innerHTML = `
-      <img src="${img}">
-      <div class="card-overlay">
-        <div class="card-title">${item.company}</div>
-      </div>
-    `;
-    box.appendChild(div);
-  });
-}
+const container = document.getElementById("companyGrid");
+companyList.forEach(item => {
+  const div = document.createElement("div");
+  div.className = "card";
+  div.onclick = () => window.location.href = item.company_url;
+  div.innerHTML = `
+    <img src="${item.img_url}" alt="${item.company}">
+    <div class="card-overlay">
+      <div class="card-title">${item.company}</div>
+    </div>
+  `;
+  container.appendChild(div);
+});
 </script>
 
 </body>
