--- a/index3.html
+++ b/index3.html
@@ -13,11 +13,12 @@ body {
   padding: 20px;
 }
 
-/* 顶部卡片布局 */
+/* 卡片布局 */
 #companyGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 20px;
+  margin-top: 40px;
   margin-bottom: 40px;
 }
 
@@ -57,9 +58,9 @@ body {
   text-shadow: 0 0 10px rgba(0,0,0,.8);
 }
 
-/* 底部文字列表 */
+/* 文字列表 */
 .channel-list {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .channel-list p {
   margin: 6px 0;
@@ -74,12 +75,7 @@ body {
 
 <h1>频道首页</h1>
 
-<!-- 顶部三个卡片 -->
-<div id="companyGrid"></div>
-
-<hr>
-
-<!-- 底部文字列表 -->
+<!-- 文字列表 -->
 <div class="channel-list">
   <h2>频道首页</h2>
   <p><a href="./CN_AV/index.html">国产AV网站</a></p>
@@ -90,8 +86,11 @@ body {
   <p><a href="./福利姬频道总目录/index.html">COS福利姬图库</a></p>
 </div>
 
+<!-- 底部三个卡片 -->
+<div id="companyGrid"></div>
+
 <script>
-// 顶部三个卡片数据
+// 底部三个卡片数据
 const companyList = [
   { company: "国产AV网站", company_url: "./CN_AV/index.html", img_url: "https://example.com/cnav.jpg" },
   { company: "日本AV", company_url: "./JAV/index.html", img_url: "https://example.com/jav.jpg" },
