--- a/index3.html
+++ b/index3.html
@@ -16,11 +16,12 @@ body {
 /* 卡片布局 */
 #companyGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
 
 /* 卡片 */
 .card {
