--- a/HongKongSex/index.html
+++ b/HongKongSex/index.html
@@ -138,7 +138,7 @@ body {
 <!-- 国产AV -->
 <section>
   <div class="section-title-row">
-    <div class="section-title">🎬 日本AV专区</div>
+    <div class="section-title">🎬 香港三级专区</div>
     <a href="https://yunvgong.com/HongKongSex/main" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="drama-grid" id="chinaGrid"></div>
