--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ body {
 const companyList = [
   { company: "国产AV网站", company_url: "./CN_AV/index.html", img_url: "https://picmeta2024.sbs/upload/vod/20230820-1/0795de893a1526f058a7512764085c20.jpg" },
   { company: "日本AV", company_url: "./JAV/index.html", img_url: "https://picture.yoshiclub.xyz/20250327/370cdc51-a89c-421b-ad1f-f06b8551e8bc.jpg" },
+  { company: "香港三级片区", company_url: "./HongKongSex/index.html", img_url: "https://img.cdn202511.com/videos/202509/04/68b8cf11d640eb31dfab4334/cover.jpg" },
   { company: "COS福利姬图库", company_url: "./福利姬频道总目录/index.html", img_url: "https://tutu1.space/images/2025/10/04/6b7ff4a2a8d95d22cedc3788e2f4e4af.jpg" }
 ];
 
