--- a/HongKongSex/header.html
+++ b/HongKongSex/header.html
@@ -3,14 +3,13 @@
 
 <div class="headerbar">
   <div class="logo">御女宫日本AV</div>
-  <a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
+  <a href="https://yunvgong.com/HongKongSex/index.html" class="logo">御女宫日本AV</a>
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-    <a href="/JAV/newAV">最新更新</a>
-    <a href="/JAV/main">香港三级</a>
-    <a href="/JAV/actress">日本女优</a>
-    <a href="/JAV/company">A片出品厂</a>
-    <a href="https://t.me/yunvgongJAV" target="_blank">香港三级电报群</a>
+    <a href="/HongKongSex/HongKong">香港三级</a>
+    <a href="/HongKongSex/Japan">日本三级</a>
+    <a href="/HongKongSex/Korea">韩国女优</a>
+    <a href="https://t.me/yunvgongHongKongSex" target="_blank">香港三级电报群</a>
   </nav>
 </div>
