--- a/JAV/index.html
+++ b/JAV/index.html
@@ -135,7 +135,7 @@ body {
   </div>
 </section>
 
-<!-- 国产AV -->
+<!-- 日本AV -->
 <section>
   <div class="section-title-row">
     <div class="section-title">🎬 日本AV专区</div>
@@ -143,6 +143,27 @@ body {
   </div>
   <div class="drama-grid" id="chinaGrid"></div>
 </section>
+
+<!-- 日本AV -->
+<section>
+  <div class="section-title-row">
+    <div class="section-title">🎬 日本AV无码专区</div>
+    <a href="https://yunvgong.com/JAV/uncensored" class="more-link" target="_blank">看更多 ›</a>
+  </div>
+  <div class="drama-grid" id="chinaGrid"></div>
+</section>
+
+
+<!-- 日本AV -->
+<section>
+  <div class="section-title-row">
+    <div class="section-title">🎬 日本AV有码专区</div>
+    <a href="https://yunvgong.com/JAV/censored" class="more-link" target="_blank">看更多 ›</a>
+  </div>
+  <div class="drama-grid" id="chinaGrid"></div>
+</section>
+
+
 
 <!-- 底部 footer -->
 <div id="footer-placeholder"></div>
