--- a/JAV/actressDatas.html
+++ b/JAV/actressDatas.html
@@ -146,7 +146,7 @@ function getSeriesName() {
 
 function loadSeriesData(seriesName) {
   const script = document.createElement('script');
-  script.src = "JAV_actress_menu/" + seriesName + "_AVactress_data.js"; 
+  script.src = "actress_menu/" + seriesName + "_AVactress_data.js"; 
   script.onload = () => {
     if (window.actressData) initPage(window.actressData);
     else if (typeof actressData !== 'undefined') initPage(actressData);
