--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -17,9 +17,10 @@
     <a href="/CN_SELFIE/CouplesSex">情侣做爱</a>
 	<a href="/CN_SELFIE/oralSex_page">口交</a>
 	<a href="/CN_SELFIE/RearEntry">后入</a>
+	<a href="/CN_SELFIE/Cycling">女上位</a> 
 	<a href="/CN_SELFIE/breasts">巨乳</a>  
-	<a href="/CN_SELFIE/Exposure">露出</a>
-	<a href="/CN_SELFIE/91pron">91自拍</a>
+	<a href="/CN_SELFIE/Exposure">露出</a> 
+	<a href="/CN_SELFIE/91pron">91自拍</a>  
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
