--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -25,6 +25,8 @@
 	<a href="/CN_SELFIE/Lewd">多人淫乱</a> 
 	<a href="/CN_SELFIE/Leaked">黑料泄密</a> 
 	<a href="/CN_SELFIE/Upskirting">偷拍裙底</a>
+	<a href="/CN_SELFIE/QJ_Rape">强奸</a>
+	<a href="/CN_SELFIE/MJ_Rape">迷奸</a>
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
