--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -29,6 +29,7 @@
 	<a href="/CN_SELFIE/MJ_Rape">迷奸</a>
 	<a href="/CN_SELFIE/KTV">KTV</a> 
 	<a href="/CN_SELFIE/virgin">处女</a> 
+	<a href="/CN_SELFIE/casualSex">约炮系列</a> 
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
